--- a/gallery.html
+++ b/gallery.html
@@ -20,14 +20,14 @@
   <main>
     <h2>Festival Gallery</h2>
     <div class="gallery">
-      <img src="./bull9.jpg" height="250px" alt="Decorated Bull">
-      <img src="./bull10.jpg" height="250px" alt="Decorated Bull">
+      <img src="./image/bull9.jpg" height="250px" alt="Decorated Bull">
+      <img src="./image/bull10.jpg" height="250px" alt="Decorated Bull">
       
-      <img src="./bull12.jpg" height="250px" alt="farmers with bulls">
-      <img src="./bull3.jpg" height="250px" alt="Bail Pola Celebration">
-      <img src="./bull2.jpg" height="250px" alt="Decorated Bull">
-       <img src="./bull7.jpg" height="250px" alt="Decorated Bull">
-        <img src="./bull4.avif" height="250px" alt="Decorated Bull">
+      <img src="./image/bull12.jpg" height="250px" alt="farmers with bulls">
+      <img src="./image/bull13.jpg" height="250px" alt="Bail Pola Celebration">
+      <img src="./image/bull2.jpg" height="250px" alt="Decorated Bull">
+       <img src="./image/bull7.jpg" height="250px" alt="Decorated Bull">
+        <img src="./image/bull4.avif" height="250px" alt="Decorated Bull">
 
     </div>
   </main>
