--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bull1">
   <header>
-    <h1><img src="happy.png" height="55px" width="55px" alt="Bail Pola Festival">Bail Pola Festival</h1>
+    <h1><img src="./image/happy.png" height="55px" width="55px" alt="Bail Pola Festival">Bail Pola Festival</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="schedule.html">Schedule</a>
